# clio

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: ci.yml  pr-title-lint.yml  release.yml
brand/: BRAND.md  Clio Brand.html
brand/components/: clio-brand.jsx  primitives.jsx
design/: Database App.html  README.md  auto-update.md  mcp-connection-authority.md  redaction.md  result-editing.md
design/components/: agent.jsx  app-shell.jsx  artboards-system.jsx  artboards.jsx  callouts.jsx  data.jsx  editing.jsx  overlays.jsx  surfaces.jsx
design/styles/: tokens.css
dev/: db.sh  design.sh  docker-compose.yml  reseed.sh
dev/seed/: 01_schema.sql  02_data.sql  03_views.sql
docs/: DESIGN_DOC.md  POC_NOTES.md  POC_PROMPT.md  UI_DESIGN_PROMPT.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  bridge.rs  connections.rs  core.rs  lib.rs  main.rs  mcp.rs  pool.rs  types.rs
src-tauri/src/core/: execute.rs  export.rs  lifecycle.rs  lineage.rs  mutations.rs  permission.rs  policy.rs  query.rs  redactor.rs  saved_queries.rs  schema.rs  sensitivity.rs  snippets.rs
src/components/: ActivityStrip.tsx  AddConnectionModal.tsx  AgentDrawer.tsx  AgentHistoryView.tsx  AgentStreamView.tsx  AgentStrip.tsx  AgentSurface.tsx  BulkMigrationCard.tsx  CellEditor.tsx  CommandPalette.tsx  ConnectCard.tsx  ConnectionRail.tsx  ExportMenu.tsx  JsonSidebar.tsx  McpConfigModal.tsx  Modal.tsx  PendingTray.tsx  PermissionCard.tsx  PolicyModal.tsx  ResultsGrid.tsx  ReviewModal.tsx  SaveQuerySheet.tsx  SchemaTree.tsx  SensitivityModal.tsx  ShortcutsOverlay.tsx  SnippetsModal.tsx  Splitter.tsx  SqlEditor.tsx  TabBar.tsx  TableStructure.tsx  Toast.tsx  UpdateIndicator.tsx  Workspace.tsx  agentShared.tsx  brand.tsx
src/lib/: api.ts  editing.ts  exporters.ts  gridSelection.ts  gridUtils.ts  useCopyFeedback.ts  (+8 more)
(+3 files in other folders)
