[package]
name = "database-app"
version = "0.2.0"
description = "Postgres workbench you watch from"
edition = "2021"
rust-version = "1.77"

[lib]
name = "database_app_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "database-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tauri-plugin-pilot = { git = "https://github.com/mpiton/tauri-pilot" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }

keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
async-trait = "0.1"
futures-util = "0.3"

# Redaction: deterministic Faker (HMAC-seeded). In-house generators in
# core/redactor.rs — no external faker crate.
hmac = "0.12"
sha2 = "0.10"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
schemars = "1"

# SQL parser for the permission-gate policy evaluator. AST-level extraction
# of op kind + targets so we can distinguish DROP TABLE from DROP SCHEMA and
# handle CTE writes correctly.
sqlparser = "0.62"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
